@@ -437,6 +437,9 @@ package body Sem is
          when N_Parameter_Association =>
             Analyze_Parameter_Association (N);
 
+         when N_Parametrized_Expression =>
+            Analyze_Parametrized_Expression (N);
+
          when N_Pragma =>
             Analyze_Pragma (N);
 
